--- a/index.html
+++ b/index.html
@@ -1663,8 +1663,7 @@ function updateCountdown(){
 }
 
 // Mettre à jour toutes les secondes
-updateCountdown();
-setInterval(updateCountdown, 1000);
+document.getElementById('countdownDisplay').textContent = 'LIVE STARTING NOW';
    /* ================= MINI CASINO LOGIC ================= */
     const slotSpinBtn=document.getElementById('slotSpinBtn');
     const reel1=document.getElementById('reel1');
